# themepark

./: .gitignore  Cargo.toml  README.md  deploy-install.sh  deploy.sh  themepark.service
app/: Cargo.toml
app/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
nginx/: nginx.conf
server/: Cargo.toml
server/src/: main.rs
style/: main.scss
