[workspace]
resolver = "2"
members = ["app", "frontend", "server"]
# Default build excludes frontend (requires wasm target + cargo-leptos)
default-members = ["app", "server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[workspace.dependencies]
# Leptos
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8" }

# Axum & Tower
axum = { version = "0.8", features = ["json", "ws"] }
cfg-if = "1.0"
console_error_panic_hook = "0.1"
console_log = "1.0"
http = "1.3"
log = "0.4"
simple_logger = "5.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
wasm-bindgen = "0.2"

# SurrealDB
surrealdb = { version = "2", features = ["kv-mem"] }

# Bevy (frontend/WASM only)
bevy = { version = "0.18", default-features = false }
leptos-bevy-canvas = "0.5"

[[workspace.metadata.leptos]]
name = "themepark"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
lib-features = ["hydrate"]
