[package]
name = "server"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = []
ssr = []  # Used by cargo-leptos; app already has ssr via dependency

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }

axum = { workspace = true }
surrealdb = { workspace = true }
simple_logger = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
log = { workspace = true }
